deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gpip
  name: gpip
  namespace: gpip
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gpip
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gpip
    spec:
      containers:
      - image: acrdevworkshopjohanlindefelt.azurecr.io/gpip:1.1.1
        imagePullPolicy: IfNotPresent
        name: gpip
        ports:
        - containerPort: 5050
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
