deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gpip
  namespace: gpip
spec:
  rules:
  - host: gpip.20.76.10.221.nip.io
    http:
      paths:
      - backend:
          serviceName: gpip
          servicePort: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - gpip.20.76.10.221.nip.io
    secretName: gpip-tls-secret
